@@ -5,6 +5,7 @@ S3method(as.integer,sj_resample)
 S3method(family,svyglm.nb)
 S3method(formula,svyglm.nb)
 S3method(hdi,default)
+S3method(hdi,stanfit)
 S3method(hdi,stanreg)
 S3method(model.frame,gee)
 S3method(model.frame,gls)
@@ -27,6 +28,7 @@ S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
 S3method(print,svyglm.nb)
 S3method(rope,default)
+S3method(rope,stanfit)
 S3method(rope,stanreg)
 S3method(wtd_sd,data.frame)
 S3method(wtd_sd,default)
